2008-01-16  Mathias Hasselmann  <mathias@openismus.com>

	Include just <libsoup/soup.h> when possible.

	* libepc/consumer.c: Include just <libsoup/soup.h>.
	* libepc/publisher.c: Include <libsoup/soup.h> instead of
	<libsoup/soup-socket.h>. All the other API isn't exported by
	<libsoup/soup.h> for some reason.

2008-01-16  Mathias Hasselmann  <mathias@openismus.com>

	Update year in copyright information.

2008-01-16  Mathias Hasselmann  <mathias@openismus.com>

	Check for aui_service_dialog_set_service_type_name by feature,
	instead of checking the pkg-config version.

	* configure.ac: Use AC_CHECK_LIB instead of pkg-config to detect
	aui_service_dialog_set_service_type_name.
	* examples/consumer-ui.c: Use HAVE_SET_SERVICE_TYPE_NAME macro,
	instead of HAVE_AVAHI_UI_0_6_22. Include "config.h"".
	* Makefile.am: Drop HAVE_AVAHI_UI_0_6_22 hackery.

2008-01-15  Mathias Hasselmann  <mathias@openismus.com>

	Document LT_VERSION_INFO rules.

	* configure.ac: Bump version number. Document LT_VERSION_INFO rules.

2008-01-15  Mathias Hasselmann  <mathias@openismus.com>

	=== Release 0.3.3 ===

	* NEWS: Updated for release 0.3.3

2008-01-15  Mathias Hasselmann  <mathias@openismus.com>

	Use correct libtool version information (#509503).

	* configure.ac: Bump version number and correct LT_VERSION_INFO.

2008-01-14  Mathias Hasselmann  <mathias@openismus.com>

	=== Release 0.3.2 ===

	* NEWS: Updated for release 0.3.2

2008-01-09  Mathias Hasselmann  <mathias@openismus.com>

	Build with latest gio version (#508272, Emilio Pozuelo Monfort).

	* libepc/publisher.c: Include <gio/gio.h> instead of
	<gio/gcontenttype.h>.

2007-12-17  Mathias Hasselmann  <mathias@openismus.com>

	Explictly add copyright statements to make licensecheck happy.
	Reported by Pedro Fragoso.

	* libepc/enums.c.in, libepc/enums.h.in, Makefile.am:
	Mark libepc/enums.[ch] and libepc/marshal.[ch] as generated.
	* tests/*: Explictly add LGPL header to test-cases.