@@ -58,32 +58,31 @@ TESTS = \
 # ================
 
 libepc_headers = \
-	libepc/consumer.h \
-	libepc/contents.h \
-	libepc/dispatcher.h \
-	libepc/marshal.h \
-	libepc/protocol.h \
-	libepc/publisher.h \
-	libepc/service-info.h \
-	libepc/service-monitor.h \
-	libepc/service-type.h \
-	libepc/shell.h \
-	libepc/tls.h
+	$(srcdir)/libepc/consumer.h \
+	$(srcdir)/libepc/contents.h \
+	$(srcdir)/libepc/dispatcher.h \
+	$(srcdir)/libepc/protocol.h \
+	$(srcdir)/libepc/publisher.h \
+	$(srcdir)/libepc/service-info.h \
+	$(srcdir)/libepc/service-monitor.h \
+	$(srcdir)/libepc/service-type.h \
+	$(srcdir)/libepc/shell.h \
+	$(srcdir)/libepc/tls.h
 libepc_include_HEADERS = \
 	$(libepc_headers) \
 	libepc/enums.h \
 	libepc/marshal.h
 libepc_ui_include_HEADERS = \
-	libepc-ui/password-dialog.h \
-	libepc-ui/progress-window.h
+	$(srcdir)/libepc-ui/password-dialog.h \
+	$(srcdir)/libepc-ui/progress-window.h
 pkgconfig_DATA = \
 	libepc-1.0.pc \
 	libepc-ui-1.0.pc
 EXTRA_DIST = \
-	gtk-doc.make \
+	$(srcdir)/gtk-doc.make \
 	$(gtkdoc_srcdir)/libepc-1.0-docs.xml \
 	$(gtkdoc_srcdir)/libepc-1.0-sections.txt \
-	tests/test-runner.sh
+	$(srcdir)/tests/test-runner.sh
 
 BUILT_SOURCES = \
 	libepc/enums.c \
@@ -186,24 +185,24 @@ tests_test_service_type_LDADD			= libepc/libepc-1.0.la tests/libepc-tests.la
 # -- CUSTOM RULES --
 # ==================
 
-libepc/marshal.h: libepc/marshal.list
+libepc/marshal.h: $(srcdir)/libepc/marshal.list
 	{ echo '/* Generated by $(GLIB_GENMARSHAL) from $< */' && \
 	  $(GLIB_GENMARSHAL) $< --header --prefix=_epc_marshal; } > $@ || \
 	{ rm -f $@; false; }
-libepc/marshal.c: libepc/marshal.list
+libepc/marshal.c: $(srcdir)/libepc/marshal.list
 	{ echo '/* Generated by $(GLIB_GENMARSHAL) from $< */' && \
 	  echo '#include "marshal.h"' && \
 	  $(GLIB_GENMARSHAL) $< --body --prefix=_epc_marshal; } > $@ || \
 	{ rm -f $@; false; }
 
-libepc/enums.h.tmp: libepc/enums.h.in $(libepc_headers)
-	(cd $(srcdir) && $(GLIB_MKENUMS) --template $< $(libepc_headers)) > $@ || { rm -f $@; false; }
+libepc/enums.h.tmp: $(srcdir)/libepc/enums.h.in $(libepc_headers)
+	$(GLIB_MKENUMS) --template $< $(libepc_headers) > $@ || { rm -f $@; false; }
 libepc/enums.h.stamp: libepc/enums.h.tmp
 	cmp -s $< libepc/enums.h || cp $< libepc/enums.h; touch $@
 libepc/enums.h: libepc/enums.h.stamp
 
-libepc/enums.c.tmp: libepc/enums.c.in $(libepc_headers)
-	(cd $(srcdir) && $(GLIB_MKENUMS) --template $< $(libepc_headers)) > $@ || { rm -f $@; false; }
+libepc/enums.c.tmp: $(srcdir)/libepc/enums.c.in $(libepc_headers)
+	$(GLIB_MKENUMS) --template $< $(libepc_headers) > $@ || { rm -f $@; false; }
 libepc/enums.c.stamp: libepc/enums.c.tmp
 	cmp -s $< libepc/enums.c || cp $< libepc/enums.c; touch $@
 libepc/enums.c: libepc/enums.c.stamp
@@ -226,8 +225,6 @@ docs: $(lib_LTLIBRARIES)
 	cd $(gtkdoc_builddir) && $(MAKE) $(AM_MAKEFLAGS) docs
 install-data-local:
 	cd $(gtkdoc_builddir) && $(MAKE) $(AM_MAKEFLAGS) install-data
-maintainer-clean-local:
-	cd $(gtkdoc_builddir) && $(MAKE) $(AM_MAKEFLAGS) maintainer-clean
 uninstall-local:
 	cd $(gtkdoc_builddir) && $(MAKE) $(AM_MAKEFLAGS) uninstall
 
